objects/Program__c.object
<CustomObject>
    <description>Program is an Intervention object. Intervention Programs are aligned with Indicator Areas and are a high level set of activities with defined dosage goals. Each Program has its own frequency, target dosage, and recommended time per session. An example Program is one-on-one reading.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked then the Program is currently available for use.</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Any additional information to describe the Program</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Helpful_Links__c</fullName>
        <inlineHelpText>Set of instructive or helpful links to end users who will be administering this Program. These links could be to a website, YouTube video, etc.</inlineHelpText>
        <label>Helpful Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Indicator_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>You must select an Indicator Area that aligns with this Program.</inlineHelpText>
        <label>Indicator Area</label>
        <referenceTo>Indicator_Area__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Target_Dosage__c</fullName>
        <inlineHelpText>Overall goal or target dosage (in mins) for this Program to be effective. This number will display on all Intervention Sections created under this Program.</inlineHelpText>
        <label>Overall Target Dosage (in mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <inlineHelpText>Provide description of the Program. This description will display on the Intervention Sections created under this Program.</inlineHelpText>
        <label>Program Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Curriculum</fullName>
                </value>
                <value>
                    <fullName>Intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Time_per_Session__c</fullName>
        <inlineHelpText>Recommended amount of time (in min) that each meeting, or session, of this Intervention should take to be effective. This number will display on all Intervention Sections created under this Program.</inlineHelpText>
        <label>Recommended Time per Session (in mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Weekly_Frequency__c</fullName>
        <inlineHelpText>Recommended frequency that this Program should meet in order to be effective. Select how many times per week this Program should meet.</inlineHelpText>
        <label>Recommended Weekly Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 session a week</fullName>
                </value>
                <value>
                    <fullName>2 sessions a week</fullName>
                </value>
                <value>
                    <fullName>3 sessions a week</fullName>
                </value>
                <value>
                    <fullName>4 sessions a week</fullName>
                </value>
                <value>
                    <fullName>5 sessions a week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Program required for your school or organization? Administrators can select whether Programs should be required or not. If yes, then each school will automatically be associated with this Program. Schools can opt of required Programs.</inlineHelpText>
        <label>Required Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkipDosage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Dosage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This field is automatically updated based on whether your organization has setup approval processes for Programs.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter_s_Site__c</fullName>
        <formula>TEXT( CreatedBy.Site__c )</formula>
        <label>Submitter&apos;s Site</label>
        <type>Text</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Required_Program__c</columns>
        <columns>Indicator_Area__c</columns>
        <columns>Program_Description__c</columns>
        <columns>Overall_Target_Dosage__c</columns>
        <columns>Recommended_Time_per_Session__c</columns>
        <columns>Recommended_Weekly_Frequency__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HQ_Approval_Team_Program</fullName>
        <filterScope>Queue</filterScope>
        <label>HQ Approval Team</label>
        <queue>HQ_Approval_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>