objects/Program__c/fields/Exclude_From_Aperture_Integration__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Aperture_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Aperture Integration</label>
    <type>Checkbox</type>
</CustomField>