objects/Program__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Required_Program__c</columns>
    <columns>Indicator_Area__c</columns>
    <columns>Program_Description__c</columns>
    <columns>Overall_Target_Dosage__c</columns>
    <columns>Recommended_Time_per_Session__c</columns>
    <columns>Recommended_Weekly_Frequency__c</columns>
    <columns>Status__c</columns>
    <columns>Exclude_From_Aperture_Integration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>