objects/Program__c/listViews/HQ_Approval_Team_Program.listView-meta.xml
<ListView>
    <fullName>HQ_Approval_Team_Program</fullName>
    <filterScope>Queue</filterScope>
    <label>HQ Approval Team</label>
    <queue>HQ_Approval_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>